JOORSAND/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Ultimate_Parent_Account__c</fullName>
        <description>To display the highest Account in the hierarchy on any given account, and in hyperlink format for easy access.</description>
        <formula>HYPERLINK(&apos;/&apos; + 
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Parent.Id, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Id, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Name)), Parent.Parent.Parent.Id, 
IF(NOT(ISBLANK(Parent.Parent.Name)), Parent.Parent.Id, 
IF(NOT(ISBLANK(Parent.Name)),Parent.Id, 
Id))))), 
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Parent.Name, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Name, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Name)), Parent.Parent.Parent.Name, 
IF(NOT(ISBLANK(Parent.Parent.Name)), Parent.Parent.Name, 
IF(NOT(ISBLANK(Parent.Name)),Parent.Name, 
Name))))))</formula>
        <inlineHelpText>Account at the top of this Account&apos;s Hierarchy.</inlineHelpText>
        <label>Ultimate Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activewear/Athleisure</fullName>
                </value>
                <value>
                    <fullName>Candles</fullName>
                </value>
                <value>
                    <fullName>Denim</fullName>
                </value>
                <value>
                    <fullName>Eyewear</fullName>
                </value>
                <value>
                    <fullName>Footwear</fullName>
                </value>
                <value>
                    <fullName>Fragrance</fullName>
                </value>
                <value>
                    <fullName>Gifts/Tech</fullName>
                </value>
                <value>
                    <fullName>Handbags &amp; Accessories</fullName>
                </value>
                <value>
                    <fullName>Hats</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Jewelry</fullName>
                </value>
                <value>
                    <fullName>Kids</fullName>
                </value>
                <value>
                    <fullName>Lingerie/Intimates</fullName>
                </value>
                <value>
                    <fullName>Mens</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
                <value>
                    <fullName>Outerwear</fullName>
                </value>
                <value>
                    <fullName>RTW</fullName>
                </value>
                <value>
                    <fullName>Sneakers</fullName>
                </value>
                <value>
                    <fullName>Streetwear</fullName>
                </value>
                <value>
                    <fullName>Surf/Skate</fullName>
                </value>
                <value>
                    <fullName>Swim</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Watches</fullName>
                </value>
                <value>
                    <fullName>Womens</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_Ever_a_Free_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when Free Customer checkbox is checked. Backend field, will never become unchecked so reports can be built on the % of free accounts that become a customer.</description>
        <label>Was Ever a Free Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Brands__c</fullName>
        <description>The number of brands associated with the Brand Account --OR-- the number of brands carried by the Retailer Account.</description>
        <inlineHelpText>How many brands are carried by (Retailer) or associated with (Brand) this Account?</inlineHelpText>
        <label># of Brands</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Doors__c</fullName>
        <description>The number of physical locations this Account has.</description>
        <inlineHelpText>How many doors (physical locations) does this Account have?</inlineHelpText>
        <label># of Doors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Lost_Opportunities__c</fullName>
        <description>Counts the number of lost Opportunities on the Account. Used for reporting and segmentation.</description>
        <inlineHelpText>How many Opportunities have been lost on this Account?</inlineHelpText>
        <label># of Lost Opportunties</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>12_Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Open_Opportunities__c</fullName>
        <description>Counts the number of open Opportunities on the Account. Used for reporting and validating Recycle Account button flow.</description>
        <inlineHelpText>How many open Opportunities are currently on this Account?</inlineHelpText>
        <label># of Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Open_Renewals__c</fullName>
        <description>Counts how many open renewal Opportunities are on the Account.</description>
        <inlineHelpText>How many open Renewal Opportunities are currently on this Account?</inlineHelpText>
        <label># of Open Renewals</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>equals</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Retailerr__c</fullName>
        <description>The number of retailers carrying the Brand Account --OR-- the number of retailers associated with the Retailer Account.</description>
        <inlineHelpText>How many retailers are carried by (Brand) or associated with (Retailer) this Account?</inlineHelpText>
        <label># of Retailers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Won_Opportunities__c</fullName>
        <description>Counts the number of won Opportunities on the Account. Used for reporting and segmentation.</description>
        <inlineHelpText>How many Opportunities have been won on this account?</inlineHelpText>
        <label># of Won Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>All_Time_Partnerships</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Business_Category__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Status__c</columns>
        <columns>Status_Flag__c</columns>
        <columns>Partnership_Start_Date__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Partnership_Checkbox__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Time Partnerships</label>
    </listViews>
    <listViews>
        <fullName>All_Time_Paying_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Business_Category__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Status__c</columns>
        <columns>Status_Flag__c</columns>
        <columns>Customer_Start_Date__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Customer_Checkbox__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Time Paying Customers</label>
    </listViews>
    <listViews>
        <fullName>Former_Partnerships</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Business_Category__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Status__c</columns>
        <columns>Status_Flag__c</columns>
        <columns>Partnership_Start_Date__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Region__c</columns>
        <columns>Recycled_By__c</columns>
        <columns>Recycled_Date_Time__c</columns>
        <columns>Recycled_Notes__c</columns>
        <columns>Future_Interest__c</columns>
        <columns>Future_Interest_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Partnership_Checkbox__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Customer</value>
        </filters>
        <label>Former Partnerships</label>
    </listViews>
    <listViews>
        <fullName>Former_Paying_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Business_Category__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Status__c</columns>
        <columns>Status_Flag__c</columns>
        <columns>Customer_Start_Date__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Region__c</columns>
        <columns>Recycled_By__c</columns>
        <columns>Recycled_Date_Time__c</columns>
        <columns>Recycled_Notes__c</columns>
        <columns>Future_Interest__c</columns>
        <columns>Future_Interest_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Checkbox__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Customer</value>
        </filters>
        <label>Former Paying Customers</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Business_Category__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Status__c</columns>
        <columns>Status_Flag__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Customer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Business_Category__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Status__c</columns>
        <columns>Status_Flag__c</columns>
        <columns>Customer_Start_Date__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>Active_ARR__c</columns>
        <columns>Next_Renewal_Date__c</columns>
        <columns>LCV__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Customer - Paying,Customer - Partner</value>
        </filters>
        <label>My Customer Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Opportunity_Accounts</fullName>
        <booleanFilter>1 OR (2 AND 3 AND 4)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Business_Category__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Status__c</columns>
        <columns>Status_Flag__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open Opportunity</value>
        </filters>
        <filters>
            <field>of_Open_Opportunities__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>of_Open_Renewals__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Customer - Free</value>
        </filters>
        <label>My Opportunity Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Outreach_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Business_Category__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Status__c</columns>
        <columns>Status_Flag__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Outreach - Fresh,Outreach - Stale</value>
        </filters>
        <label>My Outreach Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Partnership_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Business_Category__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Status__c</columns>
        <columns>Status_Flag__c</columns>
        <columns>Partnership_Start_Date__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>Active_ARR__c</columns>
        <columns>Next_Renewal_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Customer - Partner</value>
        </filters>
        <label>My Partnership Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Recycled_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Business_Category__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Status__c</columns>
        <columns>Status_Flag__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>Recycled_By__c</columns>
        <columns>Recycled_Date_Time__c</columns>
        <columns>Recycled_Notes__c</columns>
        <columns>Future_Interest__c</columns>
        <columns>Future_Interest_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Recycled</value>
        </filters>
        <label>My Recycled Accounts</label>
    </listViews>
    <listViews>
        <fullName>Org_Account_Hierarchy</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status__c</columns>
        <columns>Status_Flag__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Account_Hierarchy</label>
    </listViews>
    <recordTypes>
        <fullName>Backend_System</fullName>
        <active>true</active>
        <description>Potential POS, ERP, Reseller, or Other partners.</description>
        <label>Partnership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Brand_Customer</fullName>
        <active>true</active>
        <description>[Customer] Brand sold through Retailers and/or their own Retail stores.</description>
        <label>Brand - Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Brand_Prospect</fullName>
        <active>true</active>
        <description>[Prospect] Brand sold through Retailers and/or their own Retail stores.</description>
        <label>Brand - Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retailer_Customer</fullName>
        <active>true</active>
        <description>[Customer] Retailer selling brands through their stores.</description>
        <label>Retailer - Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retailer_Prospect</fullName>
        <active>true</active>
        <description>[Prospect] Retailer selling brands through their stores.</description>
        <label>Retailer - Prospect</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Address_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
ISBLANK( BillingCountry ),
ISBLANK( TEXT(BillingCountryCode)  )
)</errorConditionFormula>
        <errorMessage>Billing Country and Billing Country Code are required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Amt_Required_if_Paying_Partner</fullName>
        <active>true</active>
        <description>If the partner Account is set to JOOR Pays Customer, a Payment Amount is required.</description>
        <errorConditionFormula>AND(
JOOR_Pays_Partner__c,
ISBLANK(Payment_Amount__c)
)</errorConditionFormula>
        <errorDisplayField>Payment_Amount__c</errorDisplayField>
        <errorMessage>If JOOR is paying the partner, a Payment Amount is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Key_Account_Field_Edit</fullName>
        <active>true</active>
        <description>Only SysAdmins and Director role users can modify the Key Account field. 

More specific control that can be modified easier than profile/permission set management. Should be moved to profile setting as the org grows and profiles are built out.</description>
        <errorConditionFormula>AND(
ISCHANGED(Key_Account__c),
NOT(CONTAINS($UserRole.Name,  &quot;Director&quot;)),
$User.ProfileId != &quot;00e46000001Ol87&quot;,
$User.Id != &quot;00546000000u1sE&quot;
)</errorConditionFormula>
        <errorDisplayField>Key_Account__c</errorDisplayField>
        <errorMessage>You cannot modify the Key Account field. Please contact your manager or system administrator.</errorMessage>
    </validationRules>
</CustomObject>